import { mkdir, mkdtemp, rm, writeFile } from 'node:fs/promises'
import { tmpdir } from 'node:os'
import { join } from 'node:path'
import { afterEach, beforeEach, describe, expect, it } from 'vitest'
import { resolveConsent, purgeOutbox } from '../src/consent'
import { sanitizeFlags, sanitizeCustom, sanitizeSystemCustom } from '../src/sanitize'
import { computeRunIdempotencyKey } from '../src/idempotency'
import { generateDisclosure, exampleRunEvent } from '../src/disclosure'
import { TelemetryOutbox } from '../src/outbox'
import { formatTelemetryNotice } from '../src/notice'
import {
  createTelemetry,
  telemetry,
  disableTelemetry,
  enableTelemetry,
  _resetActiveTelemetryForTests,
} from '../src/create'

const TOOL = 'evlog-test'

describe('telemetry consent', () => {
  const { env } = process

  beforeEach(() => {
    process.env = { ...env }
    delete process.env.XDG_CONFIG_HOME
    delete process.env.DO_NOT_TRACK
    delete process.env.EVLOG_TELEMETRY
  })

  afterEach(() => {
    process.env = env
  })

  it('honours DO_NOT_TRACK first', () => {
    process.env.DO_NOT_TRACK = '1'
    process.env.EVLOG_TELEMETRY = '1'
    expect(resolveConsent(TOOL)).toBe(false)
  })

  it('honours EVLOG_TELEMETRY=0 over default', () => {
    process.env.EVLOG_TELEMETRY = '0'
    expect(resolveConsent(TOOL)).toBe(false)
  })

  it('honours EVLOG_TELEMETRY=1', () => {
    process.env.EVLOG_TELEMETRY = '1'
    expect(resolveConsent(TOOL)).toBe(true)
  })
})

describe('telemetry sanitize', () => {
  it('captures boolean and number flag values', () => {
    expect(sanitizeFlags({ json: true, limit: 50 })).toEqual({ json: true, limit: 50 })
  })

  it('records string flags as presence-only by default', () => {
    expect(sanitizeFlags({ output: '/secret/path' })).toEqual({ output: true })
  })

  it('allowlists declared string flag values', () => {
    const flags = sanitizeFlags(
      { format: 'json' },
      { flags: { format: ['json', 'csv'] } },
    )
    expect(flags).toEqual({ format: 'json' })
  })

  it('drops undeclared string custom fields', () => {
    const out = sanitizeCustom({ secret: 'nope' }, {}, undefined)
    expect(out).toEqual({})
  })

  it('accepts declared string custom fields', () => {
    const out = sanitizeCustom(
      { framework: 'nuxt' },
      {},
      { fields: { framework: ['nitro', 'nuxt', 'next'] } },
    )
    expect(out).toEqual({ framework: 'nuxt' })
  })

  it('allowlists system-injected custom keys only', () => {
    expect(sanitizeSystemCustom({
      ghaAction: 'checkout',
      ghaEvent: 'push',
      secret: 'nope',
    })).toEqual({ ghaAction: 'checkout', ghaEvent: 'push' })
  })

  it('truncates long system custom strings', () => {
    const long = 'x'.repeat(200)
    expect(sanitizeSystemCustom({ ghaAction: long }).ghaAction).toHaveLength(128)
  })
})

describe('telemetry outbox', () => {
  let base: string

  beforeEach(async () => {
    base = await mkdtemp(join(tmpdir(), 'evlog-telemetry-'))
    process.env.XDG_CONFIG_HOME = base
  })

  afterEach(async () => {
    await rm(base, { recursive: true, force: true })
    delete process.env.XDG_CONFIG_HOME
    _resetActiveTelemetryForTests()
  })

  it('round-trips events offline then drains on next run', async () => {
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    const event = exampleRunEvent({ idempotencyKey: 'abc' })
    await outbox.append(event)
    const read = await outbox.readAll()
    expect(read).toHaveLength(1)
    expect(read[0]?.idempotencyKey).toBe('abc')
  })

  it('skips corrupt lines', async () => {
    const dir = join(base, TOOL, 'telemetry')
    await mkdir(dir, { recursive: true })
    await writeFile(join(dir, 'outbox.ndjson'), `{bad\n${ JSON.stringify({ event: exampleRunEvent(), storedAt: Date.now() }) }\n`)
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    expect(await outbox.readAll()).toHaveLength(1)
  })

  it('purges on opt-out', async () => {
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    await outbox.append(exampleRunEvent())
    await purgeOutbox(TOOL)
    expect(await outbox.readAll()).toHaveLength(0)
  })

  it('excludes expired events on read', async () => {
    const dir = join(base, TOOL, 'telemetry')
    await mkdir(dir, { recursive: true })
    const stale = { event: exampleRunEvent({ idempotencyKey: 'stale' }), storedAt: Date.now() - 60_000 }
    const fresh = { event: exampleRunEvent({ idempotencyKey: 'fresh' }), storedAt: Date.now() }
    await writeFile(
      join(dir, 'outbox.ndjson'),
      `${JSON.stringify(stale) }\n${JSON.stringify(fresh) }\n`,
    )
    const outbox = new TelemetryOutbox({ toolName: TOOL, maxEventAgeMs: 30_000 })
    const read = await outbox.readAll()
    expect(read).toHaveLength(1)
    expect(read[0]?.idempotencyKey).toBe('fresh')
  })

  it('serializes concurrent appends without corrupting the outbox', async () => {
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    await Promise.all(
      Array.from({ length: 20 }, (_, i) =>
        outbox.append(exampleRunEvent({ idempotencyKey: `key-${i}` })),
      ),
    )
    const read = await outbox.readAll()
    expect(read).toHaveLength(20)
    expect(new Set(read.map(e => e.idempotencyKey)).size).toBe(20)
  })

  it('recovers a stale lock from a dead pid', async () => {
    const dir = join(base, TOOL, 'telemetry')
    await mkdir(dir, { recursive: true })
    await writeFile(
      join(dir, 'outbox.lock'),
      JSON.stringify({ pid: 99_999_999, acquiredAt: Date.now() }),
    )
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    await outbox.append(exampleRunEvent({ idempotencyKey: 'recovered' }))
    expect(await outbox.readAll()).toHaveLength(1)
  })

  it('recovers a stale lock by age', async () => {
    const dir = join(base, TOOL, 'telemetry')
    await mkdir(dir, { recursive: true })
    await writeFile(
      join(dir, 'outbox.lock'),
      JSON.stringify({ pid: process.pid, acquiredAt: Date.now() - 60_000 }),
    )
    const outbox = new TelemetryOutbox({ toolName: TOOL, lockStaleMs: 30_000 })
    await outbox.append(exampleRunEvent({ idempotencyKey: 'aged-out' }))
    expect(await outbox.readAll()).toHaveLength(1)
  })
})

describe('telemetry flush', () => {
  let base: string

  beforeEach(async () => {
    base = await mkdtemp(join(tmpdir(), 'evlog-telemetry-'))
    process.env.XDG_CONFIG_HOME = base
    process.env.EVLOG_TELEMETRY = '1'
    _resetActiveTelemetryForTests()
  })

  afterEach(async () => {
    await rm(base, { recursive: true, force: true })
    delete process.env.XDG_CONFIG_HOME
    delete process.env.EVLOG_TELEMETRY
    _resetActiveTelemetryForTests()
  })

  it('never throws when drain always fails', async () => {
    const instance = createTelemetry({
      name: TOOL,
      version: '0.0.0',
      endpoint: 'http://127.0.0.1:1', // unreachable
      flushTimeoutMs: 100,
    })
    await expect(instance.run('test', () => 'ok')).resolves.toBe('ok')
    await expect(instance.flush()).resolves.toBeUndefined()
  })

  it('collects custom fields via telemetry.set()', async () => {
    const instance = createTelemetry({ name: TOOL, version: '0.0.0' })
    await instance.run('doctor', () => {
      telemetry.set({ checksFailed: 2, ok: true })
    })
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    const events = await outbox.readAll()
    expect(events[0]?.custom).toEqual({ checksFailed: 2, ok: true })
  })

  it('stops recording after disableTelemetry on the active instance', async () => {
    const instance = createTelemetry({ name: TOOL, version: '0.0.0' })
    await instance.run('before', () => undefined)
    await disableTelemetry(TOOL)
    expect(instance.enabled).toBe(false)
    await instance.run('after', () => undefined)
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    expect(await outbox.readAll()).toHaveLength(0)
  })

  it('resumes recording after enableTelemetry on the active instance', async () => {
    const instance = createTelemetry({ name: TOOL, version: '0.0.0' })
    await disableTelemetry(TOOL)
    await enableTelemetry(TOOL)
    expect(instance.enabled).toBe(true)
    await instance.run('again', () => undefined)
    const outbox = new TelemetryOutbox({ toolName: TOOL })
    const events = await outbox.readAll()
    expect(events).toHaveLength(1)
    expect(events[0]?.command).toBe('again')
  })
})

describe('telemetry notice', () => {
  const { env } = process

  beforeEach(() => {
    process.env = { ...env }
    process.env.NO_COLOR = '1'
  })

  afterEach(() => {
    process.env = env
    delete process.env.NO_COLOR
  })

  it('matches snapshot without ANSI colors', () => {
    expect(formatTelemetryNotice('my-tool')).toMatchSnapshot()
  })
})

describe('telemetry disclosure', () => {
  it('matches snapshot for default envelope', () => {
    expect(generateDisclosure('evlog-cli').markdown).toMatchSnapshot()
  })

  it('matches snapshot with collect extensions', () => {
    const doc = generateDisclosure('evlog-cli', {
      flags: { format: ['json', 'csv'] },
      fields: { framework: ['nuxt', 'next'] },
    })
    expect(doc).toMatchSnapshot()
  })
})

describe('telemetry payload snapshot', () => {
  it('matches enriched run event shape', () => {
    const key = computeRunIdempotencyKey({
      command: 'doctor',
      tool: { name: 'evlog-cli', version: '0.1.0' },
      timestamp: '2026-07-14T12:00:00.000Z',
      machineId: 'ab3f0123456789ab',
    })
    expect(exampleRunEvent({ idempotencyKey: key })).toMatchSnapshot()
  })
})

describe('telemetry status command', () => {
  it('prints the local data directory', async () => {
    const { defineTelemetryCommands } = await import('../src/commands')
    const { getTelemetryDir } = await import('../src/paths')
    const writes: string[] = []
    const original = process.stderr.write.bind(process.stderr)
    process.stderr.write = ((chunk: string | Uint8Array) => {
      writes.push(typeof chunk === 'string' ? chunk : Buffer.from(chunk).toString())
      return true
    }) as typeof process.stderr.write

    try {
      const tree = defineTelemetryCommands({ name: TOOL })
      const status = tree.subCommands?.status
      expect(status).toBeDefined()
      const cmd = typeof status === 'function' ? await status() : await status
      await cmd!.run?.({
        args: {},
        rawArgs: [],
        data: undefined,
        cmd: cmd!,
      })
      const out = writes.join('')
      expect(out).toContain(`Data directory: ${getTelemetryDir(TOOL)}`)
      expect(out).toMatch(/Telemetry: (enabled|disabled)/)
    } finally {
      process.stderr.write = original
    }
  })
})
